# keyaccounts

./: .gitignore  CMakeLists.txt  common.hpp  functions.cpp  ideas.txt  keyaccounts.cpp  keyaccounts.hpp  ktransaction.hpp
backup/: external_structs.hpp  functions.cpp  keyaccounts.cpp  keyaccounts.hpp  ktransaction.hpp
util/: .env.js  abiMod.abi  build.js  deploy.js  do.js  dummy_keys.js  eosioConfig.js  init.js  package.json  qDeploy.sh  test.js
util/lib/: encodeContractData.js  eosjs.js  sample_config.js  sample_watchaccount.js
